Refactor APDU Parser app and parser management workflow